Relabel MUSE to SounDAC

--- a/Docker/config.ini
+++ b/Docker/config.ini
@@ -1,14 +1,11 @@
 # Endpoint for P2P node to listen on
-# p2p-endpoint =
+p2p-endpoint = 0.0.0.0:33333
 
 # Maxmimum number of incoming connections on P2P endpoint
 # p2p-max-connections =
 
 # P2P nodes to connect to on startup (may specify multiple times)
-seed-node = muse.roelandp.nl:33333        # roelandp
-seed-node = 5.9.18.213:33333              # pfunk
-seed-node = 45.79.206.79:33333          # jesta
-seed-node = muse-seed.altcap.io:33333   # ihashfury
+#seed-node =
 
 # Pairs of [BLOCK_NUM,BLOCK_ID] that should be enforced as checkpoints.
 # checkpoint =
@@ -85,4 +82,4 @@ appenders=stderr
 # route messages sent to the "p2p" logger to the p2p appender declared above
 [logger.p2p]
 level=warn
-appenders=p2p (edited)
+appenders=p2p
