--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libraries/fc"]
 	path = libraries/fc
-	url = https://github.com/themuseblockchain/Muse-FC.git
+	url = https://github.com/soundac/SounDAC-FC.git
