--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,13 @@
-sonar.projectKey=MUSE-Core
-sonar.projectName=MUSE
+sonar.projectKey=SounDAC-Source
+sonar.projectName=SounDAC-Source
 
 sonar.links.homepage=https://peertracks.com/
-sonar.links.ci=https://travis-ci.org/themuseblockchain/Muse-Source
-sonar.links.issue=https://github.com/themuseblockchain/Muse-Source/issues
-sonar.links.scm=https://github.com/themuseblockchain/Muse-Source
+sonar.links.ci=https://travis-ci.org/soundac/SounDAC-Source
+sonar.links.issue=https://github.com/soundac/SounDAC-Source/issues
+sonar.links.scm=https://github.com/soundac/SounDAC-Source
 
 sonar.tests=tests
-sonar.exclusions=programs/build_helper/**/*,libraries/fc/**/*
+sonar.exclusions=programs/build_helper/**/*,libraries/fc/**/*,libraries/egenesis/egenesis_full.cpp
 sonar.sources=libraries,programs
 sonar.cfamily.build-wrapper-output=bw-output
 sonar.cfamily.gcov.reportsPath=.
