Updated readme inflation rate - Updated docker config.ini

--- a/Docker/config.ini
+++ b/Docker/config.ini
@@ -26,7 +26,7 @@ seed-node = 51.15.136.238:33333
 seed-node = 116.62.121.169:33333
 
 # Pairs of [BLOCK_NUM,BLOCK_ID] that should be enforced as checkpoints.
-# checkpoint =
+checkpoint = [3900000,"003b8260970ee1d4e97f7a18aac40d51d0882365"]
 
 # Endpoint for websocket RPC to listen on
 rpc-endpoint = 0.0.0.0:80
