Updated Dockerfile & config.ini to match an exchange node, also corrected binaries build directory.

--- a/Docker/config.ini
+++ b/Docker/config.ini
@@ -6,24 +6,6 @@ p2p-endpoint = 0.0.0.0:33333
 
 # P2P nodes to connect to on startup (may specify multiple times)
 seed-node = 138.197.68.175:33333
-seed-node = muse.riverhead.ltd:33333
-seed-node = muse.roelandp.nl:33333
-seed-node = 45.79.206.79:33333
-seed-node = muse-seed.lafona.net:33333
-seed-node = seed.musenodes.com:33333
-seed-node = 45.76.192.171:33333
-seed-node = muse.rondonson.com:33333
-seed-node = seed.muse.blckchnd.com:33333
-seed-node = 104.199.134.87:33333
-seed-node = 35.229.192.15:33333
-seed-node = seed.muse.dgazek.tk:33333
-seed-node = 138.197.68.175:33333
-seed-node = 5.9.18.213:33333
-seed-node = muse.cervantes.one:33333
-seed-node = muse.thetimsaid.com:33333
-seed-node = 88.198.90.17:33333
-seed-node = 51.15.136.238:33333
-seed-node = 116.62.121.169:33333
 
 # Pairs of [BLOCK_NUM,BLOCK_ID] that should be enforced as checkpoints.
 checkpoint = [3900000,"003b8260970ee1d4e97f7a18aac40d51d0882365"]
@@ -53,7 +35,7 @@ rpc-endpoint = 0.0.0.0:80
 public-api = database_api login_api market_history_api account_history_api
 
 # Plugin(s) to enable, may be specified multiple times
-enable-plugin = witness account_history block_info market_history
+enable-plugin = account_history block_info market_history
 
 # Defines a range of accounts to track as a json pair ["from","to"] [from,to)
 # track-account-range =
