--- a/Docker/config.ini
+++ b/Docker/config.ini
@@ -5,13 +5,13 @@ p2p-endpoint = 0.0.0.0:33333
 # p2p-max-connections =
 
 # P2P nodes to connect to on startup (may specify multiple times)
-#seed-node =
+seed-node = 138.197.68.175:33333
 
 # Pairs of [BLOCK_NUM,BLOCK_ID] that should be enforced as checkpoints.
-# checkpoint =
+checkpoint = [3900000,"003b8260970ee1d4e97f7a18aac40d51d0882365"]
 
 # Endpoint for websocket RPC to listen on
-rpc-endpoint = 0.0.0.0:8090
+rpc-endpoint = 0.0.0.0:80
 
 # Endpoint for TLS websocket RPC to listen on
 # rpc-tls-endpoint =
@@ -32,10 +32,10 @@ rpc-endpoint = 0.0.0.0:8090
 # api-user =
 
 # Set an API to be publicly available, may be specified multiple times
-public-api = database_api login_api
+public-api = database_api login_api market_history_api account_history_api
 
 # Plugin(s) to enable, may be specified multiple times
-enable-plugin = witness account_history
+enable-plugin = account_history block_info market_history
 
 # Defines a range of accounts to track as a json pair ["from","to"] [from,to)
 # track-account-range =
