--- a/Docker/config.ini
+++ b/Docker/config.ini
@@ -5,7 +5,7 @@ p2p-endpoint = 0.0.0.0:33333
 # p2p-max-connections =
 
 # P2P nodes to connect to on startup (may specify multiple times)
-seed-node = 138.197.68.175:33333
+#seed-node = 138.197.68.175:33333
 
 # Pairs of [BLOCK_NUM,BLOCK_ID] that should be enforced as checkpoints.
 checkpoint = [3900000,"003b8260970ee1d4e97f7a18aac40d51d0882365"]
