--- a/libraries/egenesis/CMakeLists.txt
+++ b/libraries/egenesis/CMakeLists.txt
@@ -1,21 +1,56 @@
-
-add_library( muse_egenesis_full
-   egenesis_full.cpp
+add_library( muse_egenesis_none
+   egenesis_none.cpp
    include/muse/egenesis/egenesis.hpp
    )
 
-target_link_libraries( muse_egenesis_full muse_chain fc )
-target_include_directories( muse_egenesis_full
+target_link_libraries( muse_egenesis_none muse_chain fc )
+target_include_directories( muse_egenesis_none
    PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )
 
 add_executable( embed_genesis
    embed_genesis.cpp
    )
 
-target_link_libraries( embed_genesis muse_chain muse_app muse_egenesis_full fc )
+target_link_libraries( embed_genesis muse_chain muse_app muse_egenesis_none fc )
+
+set( embed_genesis_args
+   -t "${CMAKE_CURRENT_SOURCE_DIR}/egenesis_brief.cpp.tmpl---${CMAKE_CURRENT_BINARY_DIR}/egenesis_brief.cpp"
+   -t "${CMAKE_CURRENT_SOURCE_DIR}/egenesis_full.cpp.tmpl---${CMAKE_CURRENT_BINARY_DIR}/egenesis_full.cpp"
+   )
+
+MESSAGE( STATUS "egenesis: " ${MUSE_EGENESIS_JSON} )
+
+if( MUSE_EGENESIS_JSON )
+   list( APPEND embed_genesis_args --genesis-json "${MUSE_EGENESIS_JSON}" )
+endif( MUSE_EGENESIS_JSON )
+
+MESSAGE( STATUS "embed_genesis_args: " ${embed_genesis_args} )
+
+add_custom_command(
+   OUTPUT
+      "${CMAKE_CURRENT_BINARY_DIR}/egenesis_brief.cpp"
+      "${CMAKE_CURRENT_BINARY_DIR}/egenesis_full.cpp"
+   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+   COMMAND embed_genesis ${embed_genesis_args}
+   DEPENDS
+      "${MUSE_EGENESIS_JSON}"
+      "${CMAKE_CURRENT_SOURCE_DIR}/egenesis_brief.cpp.tmpl"
+      "${CMAKE_CURRENT_SOURCE_DIR}/egenesis_full.cpp.tmpl"
+      embed_genesis )
+
+add_library( muse_egenesis_brief "${CMAKE_CURRENT_BINARY_DIR}/egenesis_brief.cpp" include/muse/egenesis/egenesis.hpp )
+add_library( muse_egenesis_full  "${CMAKE_CURRENT_BINARY_DIR}/egenesis_full.cpp" include/muse/egenesis/egenesis.hpp )
+
+target_link_libraries( muse_egenesis_brief muse_chain fc )
+target_link_libraries( muse_egenesis_full muse_chain fc )
+
+target_include_directories( muse_egenesis_brief
+   PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )
+target_include_directories( muse_egenesis_full
+   PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )
 
 INSTALL( TARGETS
-   embed_genesis muse_egenesis_full
+   embed_genesis muse_egenesis_none muse_egenesis_brief muse_egenesis_full
 
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
