--- a/Docker/config.ini
+++ b/Docker/config.ini
@@ -1,17 +1,17 @@
 # Endpoint for P2P node to listen on
-p2p-endpoint = 0.0.0.0:33333
+p2p-endpoint = 0.0.0.0:33332
 
 # Maxmimum number of incoming connections on P2P endpoint
 # p2p-max-connections =
 
 # P2P nodes to connect to on startup (may specify multiple times)
-#seed-node = 138.197.68.175:33333
+#seed-node = 138.197.68.175:33332
 
 # Pairs of [BLOCK_NUM,BLOCK_ID] that should be enforced as checkpoints.
-checkpoint = [3900000,"003b8260970ee1d4e97f7a18aac40d51d0882365"]
+#checkpoint = [3900000,"003b8260970ee1d4e97f7a18aac40d51d0882365"]
 
 # Endpoint for websocket RPC to listen on
-rpc-endpoint = 0.0.0.0:8090
+rpc-endpoint = 0.0.0.0:18090
 
 # Endpoint for TLS websocket RPC to listen on
 # rpc-tls-endpoint =
