--- a/.travis.yml
+++ b/.travis.yml
@@ -27,10 +27,18 @@ env:
     - CCACHE_SLOPPINESS=include_file_ctime,include_file_mtime,time_macros
 
 script:
- - sed -i '/subdirectory.*tests/d' libraries/fc/CMakeLists.txt
- - cmake -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_FLAGS=--coverage -DCMAKE_CXX_FLAGS=--coverage -DBoost_USE_STATIC_LIBS=OFF -DCMAKE_CXX_OUTPUT_EXTENSION_REPLACE=ON .
- - 'which build-wrapper-linux-x86-64 && build-wrapper-linux-x86-64 --out-dir bw-output make -j 2 || make -j 2'
- - tests/chain_test  2>&1 | cat
- - tests/plugin_test 2>&1 | cat
- - 'find libraries/[acdemnpuw]*/CMakeFiles/*.dir programs/[cjmsu]*/CMakeFiles/*.dir -type d | while read d; do gcov -o "$d" "${d/CMakeFiles*.dir/./}"/*.cpp; done >/dev/null'
- - 'which sonar-scanner && sonar-scanner || true'
+ - programs/build_helpers/buildstep -s 3450
+ - ccache -s
+ - programs/build_helpers/buildstep Prepare 1 "sed -i '/tests/d' libraries/fc/CMakeLists.txt"
+ - programs/build_helpers/buildstep cmake 5 "cmake -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_FLAGS=--coverage -DCMAKE_CXX_FLAGS=--coverage -DBoost_USE_STATIC_LIBS=OFF -DCMAKE_CXX_OUTPUT_EXTENSION_REPLACE=ON ."
+ - programs/build_helpers/buildstep make.cli_wallet 2600 "programs/build_helpers/make_with_sonar bw-output -j 2 cli_wallet"
+ - programs/build_helpers/buildstep make.mused 1800 "programs/build_helpers/make_with_sonar bw-output -j 2 mused"
+ - programs/build_helpers/buildstep make.chain_test 1800 "programs/build_helpers/make_with_sonar bw-output -j 2 chain_test"
+ - programs/build_helpers/buildstep make.plugin_test 1800 "programs/build_helpers/make_with_sonar bw-output -j 2 cli_test"
+ - set -o pipefail
+ - programs/build_helpers/buildstep run.chain_test 240 "tests/chain_test 2>&1 | cat"
+ - programs/build_helpers/buildstep run.plugin_test 30 "tests/plugin_test 2>&1 | cat"
+ - programs/build_helpers/buildstep prepare.sonar 20 'find libraries/[acdemnpuw]*/CMakeFiles/*.dir programs/[cjmsu]*/CMakeFiles/*.dir -type d | while read d; do gcov -o "$d" "${d/CMakeFiles*.dir/./}"/*.cpp; done >/dev/null'
+ - programs/build_helpers/buildstep run.sonar 1600 "which sonar-scanner && sonar-scanner || true"
+ - programs/build_helpers/buildstep end 0
+ - ccache -s
