Dont let sonar preparation fail the build

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ script:
  - set -o pipefail
  - programs/build_helpers/buildstep run.chain_test 400 "libraries/fc/tests/run-parallel-tests.sh tests/chain_test 2>&1"
  - programs/build_helpers/buildstep run.plugin_test 30 "libraries/fc/tests/run-parallel-tests.sh tests/plugin_test 2>&1"
- - programs/build_helpers/buildstep prepare.sonar 10 'find libraries/[acdemnpuw]*/CMakeFiles/*.dir programs/[cjmsu]*/CMakeFiles/*.dir -type d | while read d; do gcov -o "$d" "${d/CMakeFiles*.dir/./}"/*.cpp; done >/dev/null; programs/build_helpers/set_sonar_branch sonar-project.properties'
+ - 'programs/build_helpers/buildstep prepare.sonar 10 "find libraries/[acdemnpuw]*/CMakeFiles/*.dir programs/[cjmsu]*/CMakeFiles/*.dir -type d | while read d; do gcov -o \"\$d\" \"\${d/CMakeFiles*.dir/./}\"/*.cpp; done >/dev/null; programs/build_helpers/set_sonar_branch sonar-project.properties" || true'
  - 'programs/build_helpers/buildstep run.sonar 1200 "which sonar-scanner && sonar-scanner" || true'
  - programs/build_helpers/buildstep end 0
  - ccache -s
